--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const data = generateData(7, 21);
 ---
 
 <Layout title="Race-Pace Cheatsheet">
-    <main class="dark:bg-slate-800 dark:text-white">
+    <main>
         <div class="overflow-x-auto overflow-y-hidden">
             <div class="max-h-screen overflow-y-scroll">
                 <table
