--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Calculator from "../components/Calculator.tsx";
+import {constants, formatNumber,minToTime} from "../constants";
 type PaceType = {
     kph: string;
     mph: string;
@@ -10,23 +12,21 @@ type PaceType = {
     halfMarathon: string;
     marathon: string;
 };
-const kmToMile = 0.621371;
-const marathonK = 42.195;
-const halfMarathonK = 21.0975;
+
 const generateData = (startPace: number, endPace: number) => {
     const items: PaceType[] = [];
     while (startPace < endPace) {
         const mpk = 60 / startPace;
         const fiveK = mpk * 5;
         const tenK = mpk * 10;
-        const halfMarathon = mpk * halfMarathonK;
-        const marathon = mpk * marathonK;
+        const halfMarathon = mpk * constants.halfMarathonK;
+        const marathon = mpk * constants.marathonK;
 
         items.push({
             kph: formatNumber(startPace),
-            mph: formatNumber(startPace * kmToMile),
+            mph: formatNumber(startPace * constants.kmToMile),
             minsPerKm: formatNumber(mpk),
-            minsPerMile: formatNumber(mpk * kmToMile),
+            minsPerMile: formatNumber(mpk * constants.kmToMile),
             fiveK: minToTime(fiveK),
             tenK: minToTime(tenK),
             halfMarathon: minToTime(halfMarathon),
@@ -36,27 +36,13 @@ const generateData = (startPace: number, endPace: number) => {
     }
     return items;
 };
-const minToTime = (mins: number) => {
-    const hours = Math.floor(mins / 60);
-    const minutes = Math.floor(mins % 60);
 
-    const seconds = Math.floor((mins * 60) % 60);
-    let hourStr = hours.toString();
-    let minStr = minutes.toString();
-    let secStr = seconds.toString();
-    if (hours < 10) hourStr = `0${hourStr}`;
-    if (minutes < 10) minStr = `0${minStr}`;
-    if (seconds < 10) secStr = `0${secStr}`;
-    return `${hourStr}:${minStr}:${secStr}`;
-};
-const formatNumber = (num: number) => {
-    return num.toFixed(2);
-};
 const data = generateData(7, 21);
 ---
 
 <Layout title="Race-Pace Cheatsheet">
-    <main>
+    <main class="bg-white dark:bg-gray-800">
+        <Calculator client:load />
         <div class="overflow-x-auto overflow-y-hidden">
             <div class="max-h-screen overflow-y-scroll">
                 <table
@@ -82,21 +68,20 @@ const data = generateData(7, 21);
                             data.map((item) => (
                                 <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                                     <th
+                                        id={item.kph}
                                         scope="row"
                                         class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
                                     >
-                                        {item.kph}kph{" "}
+                                        {item.kph}kph
                                     </th>
                                     <td class="px-6 py-4">{item.mph}mph</td>
                                     <td class="px-6 py-4"> {item.minsPerKm}</td>
                                     <td class="px-6 py-4">
-                                        {" "}
                                         {item.minsPerMile}
                                     </td>
                                     <td class="px-6 py-4"> {item.fiveK}</td>
                                     <td class="px-6 py-4"> {item.tenK}</td>
                                     <td class="px-6 py-4">
-                                        {" "}
                                         {item.halfMarathon}
                                     </td>
                                     <td class="px-6 py-4"> {item.marathon}</td>
