--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
         <meta name="description" content="Race-Pace Sheet and Calculator" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+        <link rel="manifest" href="/manifest.webmanifest">
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
